# Stack_Project_AutoTest

./: .gitignore  AutoTest_OutputTest.py  AutoTest_Style.sh  AutoTest_all.sh  AutoTest_gitclassroom_tests.xlsx  AutoTest_gtest.sh  AutoTest_gtests.cpp  AutoTest_main_input.txt  AutoTest_main_output.txt  AutoTest_movie_history_updated.txt  AutoTest_movie_queue_updated.txt  AutoTest_setup.sh  CMakeLists.txt  README.md  cpplint.cfg
